# motor-muscle-sim

./: .gitignore  README.md  index.html  package.json  server.mjs
research/: README.md  pyproject.toml  requirements-rocm.txt
research/motor_muscle/: __init__.py  accelerator.py  cli.py  config.py  controllers.py  env.py  evaluate.py  humanoid.xml  mjx_env.py  model.py  motors.py  runner.py  train.py  video.py
research/scripts/: fetch_remote_results.sh  run_remote_validation.sh  serve_results_remote.sh  setup_rocm_remote.sh  sync_remote.sh
research/tests/: test_config.py  test_environment.py  test_mjx.py  test_motors.py
research/viewer/: index.html
src/: anatomy206.js  humanoid.js  main.js  renderer.js  simulator.js  styles.css
tests/: smoke.mjs
