[project]
name = "motor-muscle-research"
version = "0.1.0"
description = "MuJoCo validation backend for dense continuous motor-muscle control"
requires-python = ">=3.11,<3.13"
dependencies = [
  "mujoco==3.3.5",
  "numpy==2.1.3",
  "torch==2.6.0",
  "matplotlib==3.10.1",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
test = ["pytest==8.3.5"]
mjx = [
  "jax==0.4.35",
  "jaxlib==0.4.35",
  "mujoco-mjx==3.3.5",
]

[project.scripts]
muscle-research = "motor_muscle.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["motor_muscle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
